# gallery-demo

./: .gitignore  CMakeLists.txt  NOTES  README.md  UsingRgallery.Rmd  analyze.cc  analyze.hh  demo-setup  demo.C  demo.cc  demo.py  demo2.C  demo3.C  demo4.C  demo5.C  deps.dot  dump_branches.C  extras.mk  for_each_associated.hh  for_each_entry.hh  gallery.dot  get-sizes.sh  inc  installing_products.txt  is_callable.hh  lib  mac-sizes.txt  mac.sizes.txt  makefile  ntuple_types.hh  sizes.R  sizes.txt  ubuntu-sizes.txt  ubuntu.sizes.txt
